exports[`ScheduleOverview correctly displays a negative value. 1`] = `
<div
  className="card">
  <div
    className="card__item soft push-half-ends one-whole">
    <button
      className="float-right h6 text-dark-tertiary outlined--bottom"
      onClick={[Function]}
      style={
        Object {
          "borderColor": "inherit",
          "borderWidth": "2px",
        }
      }>
      Edit
    </button>
    <div
      className="floating text-left text-dark-primary">
      <h4
        className="floating__item flush"
        style={
          Object {
            "paddingRight": "5px",
          }
        }>
        $
      </h4>
      <h4
        className="floating__item flush"
        style={
          Object {
            "paddingRight": "3px",
          }
        }>
        -
      </h4>
      <h2
        className="floating__item flush">
        420
      </h2>
      <h4
        className="floating__item flush">
        .
        00
      </h4>
    </div>
    <div
      className="floating text-left push-bottom">
      <h5
        className="floating__item soft-half-right flush text-dark-primary">
        Step Up Fund
      </h5>
      <h6
        className="floating__item flush text-dark-tertiary">
        Once A Month
      </h6>
    </div>
    <p
      className="flush"
      style={
        Object {
          "marginBottom": "5px",
        }
      }>
      <span
        className="h7 text-dark-tertiary push-half-right"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }>
        Started: 
      </span>
      <em
        className="text-dark-primary">
        Jun 15, 2015
      </em>
    </p>
    <p
      className="flush">
      <span
        className="h7 text-dark-tertiary push-half-right"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }>
        Latest: 
      </span>
      <em
        className="text-dark-primary">
        Nov 15, 2016
      </em>
    </p>
  </div>
</div>
`;

exports[`ScheduleOverview doesn't have a latest transaction, if one isn't passed 1`] = `
<div
  className="card">
  <div
    className="card__item soft push-half-ends one-whole">
    <button
      className="float-right h6 text-dark-tertiary outlined--bottom"
      onClick={[Function]}
      style={
        Object {
          "borderColor": "inherit",
          "borderWidth": "2px",
        }
      }>
      Edit
    </button>
    <div
      className="floating text-left text-dark-primary">
      <h4
        className="floating__item flush"
        style={
          Object {
            "paddingRight": "5px",
          }
        }>
        $
      </h4>
      <h2
        className="floating__item flush">
        420
      </h2>
      <h4
        className="floating__item flush">
        .
        00
      </h4>
    </div>
    <div
      className="floating text-left push-bottom">
      <h5
        className="floating__item soft-half-right flush text-dark-primary">
        Step Up Fund
      </h5>
      <h6
        className="floating__item flush text-dark-tertiary">
        Once A Month
      </h6>
    </div>
    <p
      className="flush"
      style={Object {}}>
      <span
        className="h7 text-dark-tertiary push-half-right"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }>
        Started: 
      </span>
      <em
        className="text-dark-primary">
        Jun 15, 2015
      </em>
    </p>
  </div>
</div>
`;

exports[`ScheduleOverview falls back correctly if currency symbol isn't present. 1`] = `
<div
  className="card">
  <div
    className="card__item soft push-half-ends one-whole">
    <button
      className="float-right h6 text-dark-tertiary outlined--bottom"
      onClick={[Function]}
      style={
        Object {
          "borderColor": "inherit",
          "borderWidth": "2px",
        }
      }>
      Edit
    </button>
    <div
      className="floating text-left text-dark-primary">
      <h4
        className="floating__item flush"
        style={
          Object {
            "paddingRight": "5px",
          }
        }>
        $
      </h4>
      <h2
        className="floating__item flush">
        420
      </h2>
      <h4
        className="floating__item flush">
        .
        00
      </h4>
    </div>
    <div
      className="floating text-left push-bottom">
      <h5
        className="floating__item soft-half-right flush text-dark-primary">
        Step Up Fund
      </h5>
      <h6
        className="floating__item flush text-dark-tertiary">
        Once A Month
      </h6>
    </div>
    <p
      className="flush"
      style={Object {}}>
      <span
        className="h7 text-dark-tertiary push-half-right"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }>
        Started: 
      </span>
      <em
        className="text-dark-primary">
        Jun 15, 2015
      </em>
    </p>
  </div>
</div>
`;

exports[`ScheduleOverview falls back correctly if there isn't an amount. 1`] = `
<div
  className="card">
  <div
    className="card__item soft push-half-ends one-whole">
    <button
      className="float-right h6 text-dark-tertiary outlined--bottom"
      onClick={[Function]}
      style={
        Object {
          "borderColor": "inherit",
          "borderWidth": "2px",
        }
      }>
      Edit
    </button>
    <div
      className="floating text-left text-dark-primary">
      <h4
        className="floating__item flush"
        style={
          Object {
            "paddingRight": "5px",
          }
        }>
        $
      </h4>
      <h2
        className="floating__item flush">
        0
      </h2>
      <h4
        className="floating__item flush">
        .
        00
      </h4>
    </div>
    <div
      className="floating text-left push-bottom">
      <h5
        className="floating__item soft-half-right flush text-dark-primary">
        Step Up Fund
      </h5>
      <h6
        className="floating__item flush text-dark-tertiary">
        Once A Month
      </h6>
    </div>
    <p
      className="flush"
      style={Object {}}>
      <span
        className="h7 text-dark-tertiary push-half-right"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }>
        Started: 
      </span>
      <em
        className="text-dark-primary">
        Jun 15, 2015
      </em>
    </p>
  </div>
</div>
`;

exports[`ScheduleOverview falls back correctly if there isn't any cents. 1`] = `
<div
  className="card">
  <div
    className="card__item soft push-half-ends one-whole">
    <button
      className="float-right h6 text-dark-tertiary outlined--bottom"
      onClick={[Function]}
      style={
        Object {
          "borderColor": "inherit",
          "borderWidth": "2px",
        }
      }>
      Edit
    </button>
    <div
      className="floating text-left text-dark-primary">
      <h4
        className="floating__item flush"
        style={
          Object {
            "paddingRight": "5px",
          }
        }>
        $
      </h4>
      <h2
        className="floating__item flush">
        420
      </h2>
      <h4
        className="floating__item flush">
        .
        00
      </h4>
    </div>
    <div
      className="floating text-left push-bottom">
      <h5
        className="floating__item soft-half-right flush text-dark-primary">
        Step Up Fund
      </h5>
      <h6
        className="floating__item flush text-dark-tertiary">
        Once A Month
      </h6>
    </div>
    <p
      className="flush"
      style={Object {}}>
      <span
        className="h7 text-dark-tertiary push-half-right"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }>
        Started: 
      </span>
      <em
        className="text-dark-primary">
        Jun 15, 2015
      </em>
    </p>
  </div>
</div>
`;

exports[`ScheduleOverview has an amount, fund, frequency, started, latest and onEditClick. 1`] = `
<div
  className="card">
  <div
    className="card__item soft push-half-ends one-whole">
    <button
      className="float-right h6 text-dark-tertiary outlined--bottom"
      onClick={[Function]}
      style={
        Object {
          "borderColor": "inherit",
          "borderWidth": "2px",
        }
      }>
      Edit
    </button>
    <div
      className="floating text-left text-dark-primary">
      <h4
        className="floating__item flush"
        style={
          Object {
            "paddingRight": "5px",
          }
        }>
        $
      </h4>
      <h2
        className="floating__item flush">
        420
      </h2>
      <h4
        className="floating__item flush">
        .
        00
      </h4>
    </div>
    <div
      className="floating text-left push-bottom">
      <h5
        className="floating__item soft-half-right flush text-dark-primary">
        Step Up Fund
      </h5>
      <h6
        className="floating__item flush text-dark-tertiary">
        Once A Month
      </h6>
    </div>
    <p
      className="flush"
      style={
        Object {
          "marginBottom": "5px",
        }
      }>
      <span
        className="h7 text-dark-tertiary push-half-right"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }>
        Started: 
      </span>
      <em
        className="text-dark-primary">
        Jun 15, 2015
      </em>
    </p>
    <p
      className="flush">
      <span
        className="h7 text-dark-tertiary push-half-right"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }>
        Latest: 
      </span>
      <em
        className="text-dark-primary">
        Nov 15, 2016
      </em>
    </p>
  </div>
</div>
`;
